# SimpleGM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  occQt.cpp  occQt.h  occQt.ui  occView.cpp  occView.h  occqt.qrc  readme.txt  surfaces.cpp  surfaces.h
Resources/: lines.png~  spline.png~
